[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "furrow"
version = "0.1.1"
description = "A sleek state-machine parser to segment, extract, and format structured question chains from smashed-together text streams (OCR, handwriting text dumps, transcripts, and LLM outputs)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Elinah Moyo", email = "growthsim2@gmail.com" }]
dependencies = []
